update docker and docker entrypoint

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,17 +4,19 @@ FROM node:20-alpine
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm install --omit=dev
+RUN npm install --omit=dev && npm cache clean --force
 
 COPY . .
+
+# Installa psql e bash
+RUN apk add --no-cache postgresql-client bash
 
 # Copy and make entrypoint script executable
 COPY db/docker-entrypoint.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 
-RUN apk add --no-cache postgresql-client
-
 EXPOSE 5000
 
 ENTRYPOINT ["docker-entrypoint.sh"]
 CMD ["node", "./app/app.js"]
+
